--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@ant-design/icons": "^6.1.0",
     "@casl/ability": "^6.7.1",
     "@hookform/resolvers": "^3.3.4",
+    "@microsoft/signalr": "^10.0.0",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.21.2",
-  "antd": "^5.9.0",
+    "antd": "^5.9.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chroma-js": "^3.0.0",
